tests/ui/parser/macro/issue-37234.stderr
error: expected one of `.`, `;`, `?`, `else`, or an operator, found `""`
  --> $DIR/issue-37234.rs:3:19
   |
LL | / macro_rules! failed {
LL | |     () => {{
LL | |         let x = 5 "";
   | |                   ^^ expected one of `.`, `;`, `?`, `else`, or an operator
LL | |     }}
LL | | }
   | |_- in this expansion of `failed!`
...
LL |       failed!();
   |       --------- in this macro invocation

error: aborting due to previous error

